hello-go/manifests/00_deployment.yaml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-hello
  labels:
    app: go-hello
    app.kubernetes.io/name: go-hello
    app.kubernetes.io/part-of: workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-hello
  template:
    metadata:
      labels:
        app: go-hello
    spec:
      containers:
        - name: go-hello
          image: go-hello:latest          # reemplazar con tu imagen
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "200m"
              memory: "64Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
