hello-go/manifests/01_service.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: go-hello
  labels:
    app: go-hello
spec:
  selector:
    app: go-hello
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
