hello-go/manifests/02_route.yaml
---
# Route (OpenShift)
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: go-hello
  labels:
    app: go-hello
spec:
  to:
    kind: Service
    name: go-hello
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
